添加枚举设置按钮可见

--- a/Steup4ibas.UI/Steup4ibas.UI.csproj
+++ b/Steup4ibas.UI/Steup4ibas.UI.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ButtonsVisibleStyle.cs" />
     <Compile Include="i18nControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
