我就想提交

--- a/Steup4ibas.Tools/Steup4ibas.Tools.csproj
+++ b/Steup4ibas.Tools/Steup4ibas.Tools.csproj
@@ -42,6 +42,10 @@
     <Compile Include="i18n\i18n.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SteupConfig\" />
+    <Folder Include="SteupService\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
