--- a/Steup4ibas.Tools/Steup4ibas.Tools.csproj
+++ b/Steup4ibas.Tools/Steup4ibas.Tools.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="i18n\i18n.cs" />
+    <Compile Include="IISManager\CheckOSBitness.cs" />
+    <Compile Include="IISManager\CheckOSInfo.cs" />
+    <Compile Include="IISManager\IISManager.cs" />
+    <Compile Include="IISManager\IISManager7.cs" />
+    <Compile Include="IISManager\IISManagerXP.cs" />
+    <Compile Include="IISManager\IISRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
