--- a/Steup4ibas.UnitTest/Steup4ibas.UnitTest.csproj
+++ b/Steup4ibas.UnitTest/Steup4ibas.UnitTest.csproj
@@ -62,6 +62,9 @@
       <Name>Steup4ibas.Tools</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\app.manifest" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
