--- a/Steup4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Steup4ibas.Tools/Install4ibas.Tools.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{0C4E7178-9566-4898-8BCB-CBF4FF4193A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Steup4ibas.Tools</RootNamespace>
+    <RootNamespace>Install4ibas.Tools</RootNamespace>
     <AssemblyName>Steup4ibas.Tools</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -47,10 +47,12 @@
     <Compile Include="IISManager\IISManager.cs" />
     <Compile Include="IISManager\IISManagerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ServicesFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Services\Basis\" />
+    <Folder Include="Services\FullSteup\" />
     <Folder Include="SteupConfig\" />
-    <Folder Include="SteupService\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
