--- a/Steup4ibas.UI/Install4ibas.UI.csproj
+++ b/Steup4ibas.UI/Install4ibas.UI.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{BF2A331E-DFD1-4D0F-9C7E-DA2DEDFC5D29}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Steup4ibas.UI</RootNamespace>
+    <RootNamespace>Install4ibas.UI</RootNamespace>
     <AssemblyName>Steup4ibas.UI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -73,9 +73,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Steup4ibas.Tools\Steup4ibas.Tools.csproj">
+    <ProjectReference Include="..\Steup4ibas.Tools\Install4ibas.Tools.csproj">
       <Project>{0c4e7178-9566-4898-8bcb-cbf4ff4193a0}</Project>
-      <Name>Steup4ibas.Tools</Name>
+      <Name>Install4ibas.Tools</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
