--- a/Steup4ibas.UnitTest/Install4ibas.UnitTest.csproj
+++ b/Steup4ibas.UnitTest/Install4ibas.UnitTest.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{D16B5007-3A6E-41FC-9F8A-D088F31F6977}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Steup4ibas.UnitTest</RootNamespace>
+    <RootNamespace>Install4ibas.UnitTest</RootNamespace>
     <AssemblyName>Steup4ibas.UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -57,9 +57,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Steup4ibas.Tools\Steup4ibas.Tools.csproj">
+    <ProjectReference Include="..\Steup4ibas.Tools\Install4ibas.Tools.csproj">
       <Project>{0c4e7178-9566-4898-8bcb-cbf4ff4193a0}</Project>
-      <Name>Steup4ibas.Tools</Name>
+      <Name>Install4ibas.Tools</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
