--- a/Install4ibas.UnitTest/Install4ibas.UnitTest.csproj
+++ b/Install4ibas.UnitTest/Install4ibas.UnitTest.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="TestIISManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Install4ibas.Tools\Install4ibas.Tools.csproj">
