--- a/Install4ibas.UI/Install4ibas.UI.csproj
+++ b/Install4ibas.UI/Install4ibas.UI.csproj
@@ -42,10 +42,47 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ButtonsVisibleStyle.cs" />
+    <Compile Include="ControlTypes.cs" />
+    <Compile Include="EditConfigControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EditConfigControl.Designer.cs">
+      <DependentUpon>EditConfigControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FinishControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FinishControl.Designer.cs">
+      <DependentUpon>FinishControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="i18nControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="InstallationOptionsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="InstallationOptionsControl.Designer.cs">
+      <DependentUpon>InstallationOptionsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InstallationProgressControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="InstallationProgressControl.Designer.cs">
+      <DependentUpon>InstallationProgressControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="IUIAction.cs" />
+    <Compile Include="LicenseAcceptControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LicenseAcceptControl.Designer.cs">
+      <DependentUpon>LicenseAcceptControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModulesChooseControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ModulesChooseControl.Designer.cs">
+      <DependentUpon>ModulesChooseControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ParentControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
