--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -30,9 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BTulz.ModelsTransformer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dlls\BTulz.ModelsTransformer.dll</HintPath>
+    </Reference>
+    <Reference Include="BTulz.ModelsTransformer.B1, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dlls\BTulz.ModelsTransformer.B1.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +56,7 @@
     <Compile Include="Plugin\IISManager\IIISManager.cs" />
     <Compile Include="Plugin\IISManager\IISManager.cs" />
     <Compile Include="Plugin\IISManager\IISManagerFactory.cs" />
+    <Compile Include="Plugin\Licenses\LicensesInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ServiceEventArgs.cs" />
     <Compile Include="Common\ServiceEventHandle.cs" />
@@ -55,12 +65,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\Basis\DataType.cs" />
+    <Compile Include="Services\Basis\DBInstallBasicInformation.cs" />
+    <Compile Include="Services\Basis\IIsInstallBasicInformation.cs" />
+    <Compile Include="Services\Basis\InstallInformation.cs" />
     <Compile Include="Services\ServicesFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resource\WebFile\~packages\" />
     <Folder Include="Services\AppendInstall\" />
-    <Folder Include="Services\Basis\" />
     <Folder Include="Services\NewInstall\" />
   </ItemGroup>
   <ItemGroup>
