--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+#ModelsTransformer
+BTulz.ModelsTransformer.dll
+BTulz.ModelsTransformer.B1.dll
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
