--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Licenses\LicensesInformation.cs" />
     <Compile Include="Plugin\FileOperation\FileOperation.cs" />
     <Compile Include="Plugin\i18n\i18n.cs" />
     <Compile Include="Plugin\IISManager\CheckOSBitness.cs" />
@@ -56,7 +57,6 @@
     <Compile Include="Plugin\IISManager\IIISManager.cs" />
     <Compile Include="Plugin\IISManager\IISManager.cs" />
     <Compile Include="Plugin\IISManager\IISManagerFactory.cs" />
-    <Compile Include="Plugin\Licenses\LicensesInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ServiceEventArgs.cs" />
     <Compile Include="Common\ServiceEventHandle.cs" />
@@ -66,12 +66,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\Basis\BasisInstalllService.cs" />
-    <Compile Include="Services\Basis\DataType.cs" />
-    <Compile Include="Services\Basis\DBInstallBasicInformation.cs" />
+    <Compile Include="Common\InstallInformation\DataType.cs" />
+    <Compile Include="Common\InstallInformation\DBInstallBasicInformation.cs" />
     <Compile Include="Services\Basis\IInstallService.cs" />
-    <Compile Include="Services\Basis\IInstallStep.cs" />
-    <Compile Include="Services\Basis\IIsInstallBasicInformation.cs" />
-    <Compile Include="Services\Basis\InstallInformation.cs" />
+    <Compile Include="Services\Basis\Step\IInstallStep.cs" />
+    <Compile Include="Common\InstallInformation\IIsInstallBasicInformation.cs" />
+    <Compile Include="Common\InstallInformation\InstallInformation.cs" />
     <Compile Include="Services\ServicesFactory.cs" />
   </ItemGroup>
   <ItemGroup>
