--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -81,7 +81,6 @@
   <ItemGroup>
     <Folder Include="Resource\WebFile\~packages\" />
     <Folder Include="Services\AppendInstall\" />
-    <Folder Include="Services\NewInstall\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resource\WebFile\Tools\7zip\7z.dll" />
@@ -95,6 +94,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Services\NewInstall\InstallSteps.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
