--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -70,17 +70,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\AppendInstall\AppendInstallService.cs" />
     <Compile Include="Services\Basis\BasisInstalllService.cs" />
     <Compile Include="Common\InstallInformation\DataType.cs" />
     <Compile Include="Services\Basis\IInstallService.cs" />
     <Compile Include="Services\Basis\Step\IInstallStep.cs" />
     <Compile Include="Common\InstallInformation\AppSetting.cs" />
     <Compile Include="Services\Basis\Step\InstallStepManager.cs" />
+    <Compile Include="Services\NewInstall\NewInstallService.cs" />
     <Compile Include="Services\ServicesFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resource\WebFile\~packages\" />
-    <Folder Include="Services\AppendInstall\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resource\WebFile\Tools\7zip\7z.dll" />
@@ -97,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Services\NewInstall\InstallSteps.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Services\AppendInstall\InstallSteps.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
