--- a/Install4ibas.UI/Install4ibas.UI.csproj
+++ b/Install4ibas.UI/Install4ibas.UI.csproj
@@ -99,6 +99,12 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FormControl\InstallationOptionsControl.resx">
+      <DependentUpon>InstallationOptionsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormControl\LicenseAcceptControl.resx">
+      <DependentUpon>LicenseAcceptControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ShellControl.resx">
       <DependentUpon>ShellControl.cs</DependentUpon>
     </EmbeddedResource>
