添加7z自解压模块

--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Install4ibas.Tools</RootNamespace>
-    <AssemblyName>Steup4ibas.Tools</AssemblyName>
+    <AssemblyName>Install4ibas.Tools</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -122,6 +122,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Services\AppendInstall\InstallSteps.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource\WebFile\Tools\7zip\7zSD.sfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resource\WebFile\Tools\7zip\Config.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
