--- a/Install4ibas/Install4ibas.csproj
+++ b/Install4ibas/Install4ibas.csproj
@@ -106,7 +106,7 @@ if exist "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip" (
 del /q "setup.exe"
 copy /y "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7zSD.sfx" 7zSD.sfx
 copy /y "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\Config.txt" Config.txt
-"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.7z -r Install4ibas.exe *.dll
+"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.7z -r Install4ibas.exe *.dll SQLMaps.xml
 copy /b 7zSD.sfx + config.txt + setup.7z "setup.exe"
 del /q "7zSD.sfx"
 del /q "Config.txt"
