--- a/Install4ibas.UI/Install4ibas.UI.csproj
+++ b/Install4ibas.UI/Install4ibas.UI.csproj
@@ -33,6 +33,22 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BTulz.ModelsTransformer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Install4ibas.Tools\Dlls\BTulz.ModelsTransformer.dll</HintPath>
+    </Reference>
+    <Reference Include="BTulz.ModelsTransformer.B1, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Install4ibas.Tools\Dlls\BTulz.ModelsTransformer.B1.dll</HintPath>
+    </Reference>
+    <Reference Include="Interop.SAPbobsCOM">
+      <HintPath>..\Install4ibas.Tools\Dlls\B1\9.0\x86\Interop.SAPbobsCOM.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="Interop.SAPbouiCOM">
+      <HintPath>..\Install4ibas.Tools\Dlls\B1\9.0\x86\Interop.SAPbouiCOM.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
