--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -129,6 +129,7 @@
     <None Include="Resource\WebFile\Tools\7zip\7zSD.sfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resource\ibasModule\ibasStandardModules.xml" />
     <Content Include="Resource\SQLMaps\SQLMaps.xml" />
     <Content Include="Resource\WebFile\Tools\7zip\Config.txt" />
     <EmbeddedResource Include="Services\License\InstallSteps.xml" />
@@ -139,7 +140,12 @@
 
 REM if exist "%25ibasSourceCode%25\BasisLibrary\BTulz.ModelsTransformer\02\BTulz.ModelsTransformer.B1\bin\Debug\BTulz.*.dll" copy /y "%25ibasSourceCode%25\BasisLibrary\BTulz.ModelsTransformer\02\BTulz.ModelsTransformer.B1\bin\Debug\BTulz.*.dll" "$(ProjectDir)Dlls\"
 
- if exist "$(ProjectDir)Resource\SQLMaps\SQLMaps.xml" copy /y "$(ProjectDir)Resource\SQLMaps\SQLMaps.xml" ..\..\..\Install4ibas\bin\Debug</PreBuildEvent>
+</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>if exist "$(ProjectDir)Resource\SQLMaps\SQLMaps.xml" copy /y "$(ProjectDir)Resource\SQLMaps\SQLMaps.xml" ..\..\..\Install4ibas\bin\Debug
+
+ if exist "$(ProjectDir)Resource\ibasModule\ibasStandardModules.xml" copy /y "$(ProjectDir)Resource\ibasModule\ibasStandardModules.xml" ..\..\..\Install4ibas\bin\Debug</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
