--- a/Install4ibas.UnitTest/Install4ibas.UnitTest.csproj
+++ b/Install4ibas.UnitTest/Install4ibas.UnitTest.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="TestIISManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestIbasModules.cs" />
     <Compile Include="UnitTest2.cs" />
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
