添加背景图片

--- a/Install4ibas.UI/Install4ibas.UI.csproj
+++ b/Install4ibas.UI/Install4ibas.UI.csproj
@@ -103,6 +103,11 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ShellControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -118,6 +123,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FormControl\ChildControl.resx">
+      <DependentUpon>ChildControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormControl\EditConfigControl.resx">
       <DependentUpon>EditConfigControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -135,6 +143,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormControl\ModulesChooseControl.resx">
       <DependentUpon>ModulesChooseControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="ShellControl.resx">
       <DependentUpon>ShellControl.cs</DependentUpon>
