--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -68,8 +68,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\InstallInformation\Module.cs" />
-    <Compile Include="Common\Licenses\LicensesInformation.cs" />
+    <Compile Include="Core\InstallInformation\Module.cs" />
+    <Compile Include="Core\Licenses\LicensesInformation.cs" />
     <Compile Include="Plugin\ConfigManager\ServiceInformationCreator.cs" />
     <Compile Include="Plugin\DbManager\dbConnectionFactory.cs" />
     <Compile Include="Plugin\DbManager\SQLExecute.cs" />
@@ -84,8 +84,8 @@
     <Compile Include="Plugin\IISManager\IISManager.cs" />
     <Compile Include="Plugin\IISManager\IISManagerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Common\ServiceEventArgs.cs" />
-    <Compile Include="Common\ServiceEventHandle.cs" />
+    <Compile Include="Core\ServiceEventArgs.cs" />
+    <Compile Include="Core\ServiceEventHandle.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -93,11 +93,11 @@
     </Compile>
     <Compile Include="Services\AppendInstall\AppendInstallService.cs" />
     <Compile Include="Services\Basis\BasisInstalllService.cs" />
-    <Compile Include="Common\InstallInformation\DataType.cs" />
+    <Compile Include="Core\InstallInformation\DataType.cs" />
     <Compile Include="Services\Basis\IInstallService.cs" />
     <Compile Include="Services\Basis\Step\BasicInstallStep.cs" />
     <Compile Include="Services\Basis\Step\IInstallStep.cs" />
-    <Compile Include="Common\InstallInformation\AppSetting.cs" />
+    <Compile Include="Core\InstallInformation\AppSetting.cs" />
     <Compile Include="Services\Basis\Step\InstallStepManager.cs" />
     <Compile Include="Services\Basis\Step\InstallStep_B1_CommonRegister.cs" />
     <Compile Include="Services\Basis\Step\InstallStep_CopyModuleFile.cs" />
